--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@ body,
 #root {
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 // sass-lint:enable no-ids
