--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,13 +1,12 @@
 // main color palette
-$blue: #3a4362;
-$blue-off: #acb4b7;
-$pink: #d5b8ba;
-$pink-grey: #c7bdbe;
-
+$black: #000;
+$grey: #333;
+$blue: #7f93ac;
 $white: #fff;
+$petal: #ffebde;
+
 $white-grey: #f5f5f5;
 $grey-light: #eee;
 $grey-medium: #ccc;
 $grey-medium-dark: #aaa;
-$grey: #666;
 $grey-dark: #333;
