--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,7 @@ body,
     width: 100%;
     height: 100%;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
 }
 // sass-lint:enable no-ids
