--- a/src/components/partials/Countdown.scss
+++ b/src/components/partials/Countdown.scss
@@ -1,17 +1,19 @@
 .Countdown {
     display: flex;
+    flex-wrap: wrap;
     padding: 50px 0;
     justify-content: center;
 
     &-col {
         color: $blue;
+        flex: 1 0 10%;
         margin: 0 20px;
         background: $white;
         padding: 20px 50px;
         border-radius: 5px;
         box-shadow: 0 1px 9px rgba(0,0,0,.15);
 
-        &-element{
+        &-element {
             display: flex;
             text-align: center;
             flex-direction: column;
@@ -33,13 +35,36 @@
     }
 }
 
+@media(max-width: 1024px) {
+    .Countdown {
+        &-col {
+            flex: 1 0 0%;
+            padding: 2rem 2rem;
+            margin-bottom: 1rem;
+
+            strong {
+                font-size: 4rem;
+            }
+        }
+    }
+}
+
 @media(max-width: 767px) {
     .Countdown {
-        flex-wrap: wrap;
+        &-col {
+            &-element {
+                strong {
+                    font-size: 3rem;
+                }
+            }
+        }
+    }
+}
 
+@media(max-width: 600px) {
+    .Countdown {
         &-col {
             flex: 1 0 20%;
-            margin-bottom: 40px;
         }
     }
 }
