--- a/src/styles/framework.scss
+++ b/src/styles/framework.scss
@@ -523,6 +523,13 @@
     }
 
     .container {
+        &__gallery {
+            .thumbnail {
+                &:nth-child(n+11) {
+                    display: none;
+                }
+            }
+        }
         &__meet-the-couple {
             .column {
                 padding: 0;
