Adding the rsvp page

--- a/src/styles/framework.scss
+++ b/src/styles/framework.scss
@@ -343,6 +343,36 @@
     }
 }
 
+.FormGroup {
+    display: flex;
+    margin-bottom: 15px;
+    flex-direction: column;
+
+    &__inline {
+        flex-direction: row;
+
+        > *:first-child {
+            margin-right: 10px;
+        }
+    }
+
+    label {
+        color: $grey-medium-dark;
+        margin: 0 0 5px;
+        font-size: 1.2rem;
+        font-weight: 400
+    }
+
+    & > input,
+    & > textarea {
+        @include formElement();
+    }
+
+    textarea {
+        height: 100px;
+    }
+}
+
 @media(max-width: 1170px) {
     .container {
         &__inner {
