--- a/src/styles/framework.scss
+++ b/src/styles/framework.scss
@@ -66,7 +66,7 @@
     &__hero {
         display: flex;
         height: 600px;
-        background: url("/public/img/hero-3.jpg") no-repeat center top;
+        background: url("http://api.graceandtom.com/img/hero-3.jpg") no-repeat center top;
         background-size: cover;
 
         &.inside {
@@ -175,7 +175,7 @@
     &__countdown {
         color: $white;
         padding: 50px 0;
-        background: url("/public/img/countdown.jpg") no-repeat center top;
+        background: url("http://api.graceandtom.com/img/countdown.jpg") no-repeat center top;
         background-size: cover;
 
         h2 {
