--- a/src/components/partials/BigDay.scss
+++ b/src/components/partials/BigDay.scss
@@ -6,8 +6,8 @@
     &__time {
         padding-right: 2rem;
 
-        h3 {
-            margin: -0.75rem 0 0;
+        h5 {
+            margin: -0.5rem 0 0;
         }
     }
 
@@ -15,14 +15,32 @@
         padding-left: 2.4rem;
         border-left: .4rem solid $black;
 
-        h3 {
-            margin: -0.75rem 0 1rem;
+        h5 {
+            margin: -0.5rem 0 1rem;
         }
 
         p {
             margin: 0;
             line-height: 130%;
             color: #666;
+        }
+    }
+}
+
+@media(max-width: 767px) {
+    .timeline {
+        &__time {
+            h5 {
+                font-size: 2rem;
+                margin: -0.4rem 0 0;
+            }
+        }
+
+        &__information {
+            h5 {
+                font-size: 2rem;
+                margin: -0.4rem 0 .3rem;
+            }
         }
     }
 }
