--- a/src/index.scss
+++ b/src/index.scss
@@ -10,5 +10,6 @@ body,
     overflow-x: hidden;
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
+    scroll-behavior: smooth;
 }
 // sass-lint:enable no-ids
