--- a/src/styles/framework.scss
+++ b/src/styles/framework.scss
@@ -68,6 +68,7 @@
         height: 600px;
         background: url("http://api.graceandtom.com/img/hero-3.jpg") no-repeat center top;
         background-size: cover;
+        z-index: 1;
 
         &.inside {
             height: fit-content;
@@ -98,6 +99,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            z-index: 1;
         }
     }
 
