--- a/src/components/partials/AdminGuestList.scss
+++ b/src/components/partials/AdminGuestList.scss
@@ -33,9 +33,16 @@
 }
 
 .filters {
-    display: flex;
+    background: #f5f5f5;
+    width: fit-content;
 
     &__column {
-        flex: 1;
+        display: inline-block;
+        padding: 10px 15px;
+
+        &.active {
+            background: #666;
+            color: #fff;
+        }
     }
 }
