--- a/src/components/partials/AdminGuestList.scss
+++ b/src/components/partials/AdminGuestList.scss
@@ -35,6 +35,7 @@
 .filters {
     background: #f5f5f5;
     width: fit-content;
+    margin-bottom: 20px;
 
     &__column {
         display: inline-block;
