--- a/src/components/partials/AdminGuestList.scss
+++ b/src/components/partials/AdminGuestList.scss
@@ -32,7 +32,16 @@
     }
 }
 
+.subheader {
+    display: flex;
+
+    &__column:first-child {
+        flex: 1;
+    }
+}
+
 .filters {
+    margin-top: 1.6rem;
     background: #f5f5f5;
     width: fit-content;
     margin-bottom: 20px;
